@@ -1,0 +1,35 @@
+!!ARBvp1.0
+ATTRIB pos = vertex.position;
+PARAM mat[4] = { state.matrix.mvp };
+PARAM mat2[4] = { state.matrix.program[0] };
+OUTPUT opos = result.position;
+TEMP temp,temp2;
+
+#calculate output position
+DP4 opos.x, pos, mat[0];
+DP4 opos.y, pos, mat[1];
+DP4 opos.z, pos, mat[2];
+DP4 opos.w, pos, mat[3];
+
+DP4 result.fogcoord.x, pos, mat[2];
+MOV result.color, vertex.color;
+
+#calculate texture coords
+MOV result.texcoord[0], vertex.texcoord[0];
+MUL result.texcoord[1], pos.xzyw, program.env[10];						#shade texture
+
+#calculate shadow texture coords
+
+DP4 temp.x, pos, mat2[0];
+DP4 temp.y, pos, mat2[1];
+
+ABS temp2,temp;
+ADD temp2,temp2,program.env[17];
+RSQ temp2.x, temp2.x;
+RSQ temp2.y, temp2.y;
+ADD temp2,temp2,program.env[18];
+MAD result.texcoord[2], temp, temp2,program.env[16];
+
+DP4 result.texcoord[2].z, pos, mat2[2];
+DP4 result.texcoord[2].w, pos, mat2[3];
+END
